chore: fix error text wrap

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   background-color: #FFF;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  width: 50%;
 }
 
 .form {
@@ -35,7 +36,6 @@ h2 {
 
 .form-control {
   margin-bottom: 10px;
-  padding-bottom: 20px;
   position: relative;
 }
 
@@ -70,9 +70,6 @@ h2 {
 
 .form-control small {
   color: var(--error-color);
-  position: absolute;
-  bottom: 0;
-  left: 0;
   visibility: hidden;
 }
 
